XWIKI-17034: Allow to define different grouping strategy for notifications
  * Fix existing unit test
  * Provide new property in xwiki.properties for configuring the
    strategy
  * Minor fixes after Manuel's review

Co-Authored-By: Manuel Leduc <manuel.leduc@xwiki.com>